--- a/war/build.gradle
+++ b/war/build.gradle
@@ -5,6 +5,7 @@ description = ''
 dependencies {
     compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version:'2.0.1'
     compile group: 'commons-io', name: 'commons-io', version:'2.4'
+    compile group: 'commons-collections', name: 'commons-collections', version:'3.2.1'
     compile project(':framework')
     testCompile group: 'junit', name: 'junit', version:'4.8.2'
     providedCompile group: 'org.jboss.resteasy', name: 'resteasy-jaxrs', version:'2.2.1.GA'
@@ -13,6 +14,7 @@ dependencies {
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
     providedCompile group: 'javax.enterprise', name: 'cdi-api', version:'1.2'
     providedCompile group: 'javax.ejb', name: 'javax.ejb-api', version:'3.2'
+
 }
 
 
